<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/OnString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StartButton"
            android:onClick="TurnOn"
            android:layout_weight="1" />

        <Button
            android:text="@string/OffString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/OffButton"
            android:onClick="TurnOff"
            android:layout_weight="1" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"  >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/Selector"
            android:checkedButton="@+id/Radio">

            <RadioButton
                android:text="Radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/Radio"
                android:layout_weight="1" />

            <RadioButton
                android:text="Aux"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/Aux"
                android:layout_weight="1" />

            <RadioButton
                android:text="TV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/TV"
                android:layout_weight="1" />

        </RadioGroup>

     </TableRow>


    <Button
        android:text="@string/SetString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SetButton"
        android:onClick="SetTime" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Tænd klokken:"
                android:ems="10"
                android:id="@+id/OnTimeLabel"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/editOnTime"
                android:singleLine="true"
                android:text="@string/DefaultTimeOn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Sluk klokken:"
                android:ems="10"
                android:id="@+id/editText4"
                android:focusable="false"
                android:editable="false"
                android:focusableInTouchMode="false" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/editOffTime"
                android:singleLine="true"
                android:text="@string/DefaultTimeOff"
                android:width="10dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:text="@string/ResetString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ResetButton"
        android:onClick="ResetTime" />


    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.tbay.android.StereoControl.SimpleTextFragment"
        android:id="@+id/intro_fragment" />

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.tbay.android.common.logger.LogFragment"
        android:id="@+id/log_fragment" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="10.0.0.5"
        android:ems="10"
        android:id="@+id/DestinationIP" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="8003"
        android:ems="10"
        android:id="@+id/PortNumber" />

</LinearLayout>
